--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -3,3 +3,6 @@ workflows:
     name: Codemagic Android workflow
     max_build_duration: 120
     instance_type: mac_mini_m1
+    environment:
+      android_signing:
+        - flutter_ci_cd_codemagic
