Signing and prepering the build 1. Signing Android app using Gradle 2. Configure scripts to build the app

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -6,3 +6,17 @@ workflows:
     environment:
       android_signing:
         - flutter_ci_cd_codemagic
+    scripts:
+      - name: Set up local.properties
+        script: |
+          echo "flutter.sdk=$HOME/programs/flutter" > "$CM_BUILD_DIR/android/local.properties"
+      - name: Get Flutter packages
+        script: |
+          flutter packages pub get
+      - name: Build AAB with Flutter
+        script: |
+          flutter build appbundle --release
+      artifacts:
+        - build/**/outputs/**/*.aab
+        - build/**/outputs/**/mapping.txt
+        - flutter_drive.log
