--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -15,7 +15,8 @@ workflows:
           flutter packages pub get
       - name: Build AAB with Flutter
         script: |
-          flutter build appbundle --release
+          # flutter build appbundle --release
+          flutter build apk --release
 
     artifacts:
       - build/**/outputs/**/*.aab
