Add artifact path for apk file

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -15,11 +15,12 @@ workflows:
           flutter packages pub get
       - name: Build AAB with Flutter
         script: |
-          # flutter build appbundle --release
+          flutter build appbundle --release
           flutter build apk --release
 
     artifacts:
       - build/**/outputs/**/*.aab
+      - build/**/outputs/**/*.apk
       - build/**/outputs/**/mapping.txt
       - flutter_drive.log
 
@@ -27,5 +28,5 @@ workflows:
       email:
         recipients:
           - ben.kanku.barthelemy@gmail.com # enter your email id here
-          
+
 
